--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@ import pkg from "../../package.json";
 
 const now = new Date();
 
-// ISO Week Number
+// Get ISO Week Number
 const getISOWeek = (date: Date) => {
   const temp = new Date(date);
   temp.setUTCDate(temp.getUTCDate() + 4 - (temp.getUTCDay() || 7));
@@ -18,12 +18,12 @@ const build = new Date(__BUILD_TIMESTAMP__);
 
 const buildParts = {
   date: `${build.getFullYear()}-${pad(build.getMonth() + 1)}-${pad(build.getDate())}`,
-  time: `${pad(build.getHours())}:${pad(build.getMinutes())}`
+  time: `${pad(build.getHours())}:${pad(build.getMinutes())}`,
 };
 
 const nowParts = {
   date: `${now.getFullYear()}-${pad(now.getMonth() + 1)}-${pad(now.getDate())}`,
-  time: `${pad(now.getHours())}:${pad(now.getMinutes())}`
+  time: `${pad(now.getHours())}:${pad(now.getMinutes())}`,
 };
 
 const tzOffset = -now.getTimezoneOffset();
@@ -33,10 +33,17 @@ const tzM = pad(Math.abs(tzOffset) % 60);
 const tz = `${sign}${tzH}:${tzM}`;
 ---
 
+<style>
+  .faded {
+    opacity: 0.2;
+  }
+</style>
+
 <footer>
-  © {now.getFullYear()} <a href="https://goude.se">goude.se</a> ·
-  Week {week} ·
-  v{pkg.version} ·
-  {buildParts.date}<span style="opacity: 0.5;">T</span>{buildParts.time} ·
-  {nowParts.date}<span style="opacity: 0.5;">T</span>{nowParts.time}<span style="opacity: 0.5;">{tz}</span>
+  © {now.getFullYear()}
+  <a href="https://goude.se">goude.se</a> · Week {week} · v{pkg.version} ·
+  {buildParts.date}<span class="faded">T</span>{buildParts.time} ·
+  {nowParts.date}<span class="faded">T</span>{nowParts.time}<span class="faded"
+    >{tz}</span
+  >
 </footer>
