--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -8,8 +8,8 @@
 <a href="/">
   <img
     alt="At some point this WILL become a cursed witch's hat"
-    src="/assets/logo.webp"
+    src="/assets/min-off.svg"
     width="75"
-    height="50"
+    height="75"
   />
 </a>
