--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -20,7 +20,10 @@ const socialUrl = Astro.site!.href + "assets/social.png";
 <!-- Global Metadata -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width" />
+<!--
 <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+-->
+<link rel="icon" type="image/svg+xml" href="/assets/min-off.svg" />
 
 <!-- Primary Meta Tags -->
 <title>{title}</title>
