--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -1,12 +1,19 @@
 <style>
-  img {
+  img.logo {
     display: block;
     width: 75px;
+  }
+
+  @media (prefers-color-scheme: dark) {
+    img.logo {
+      filter: invert(1);
+    }
   }
 </style>
 
 <a href="/">
   <img
+    class="logo"
     alt="At some point this WILL become a cursed witch's hat"
     src="/assets/min-off.svg"
     width="75"
