--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -10,6 +10,7 @@ const { current = "" } = Astro.props;
     font-family: var(--font-family-sans);
     font-weight: 700;
     text-transform: uppercase;
+    margin-left: 1em;
   }
 
   a {
