--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -52,7 +52,7 @@ const { current = "" } = Astro.props;
 */
 </style>
 <nav>
-  <a class={current === "readme" ? "selected" : ""} href="/README">README</a>
   <a class={current === "about" ? "selected" : ""} href="/about">about</a>
-  <a class={current === "blog" ? "selected" : ""} href="/blog">blog</a>
+  <a class={current === "readme" ? "selected" : ""} href="/README">README</a>
+  <!--<a class={current === "blog" ? "selected" : ""} href="/blog">blog</a>-->
 </nav>
