minor edit/housekeeping activity

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -57,8 +57,8 @@ const permalink = Astro.site!.href; // FIXME: using ! for now
       >Look for the helpers. You will always find people who are helping.</span
     >
     <span class="aphorism"
-      >You will only be remembered for two things: the problems you solve or the
-      ones you create.</span
+      >You will only be remembered for two things: the problems you solve and
+      the ones you create.</span
     >
   </p>
 
