--- a/src/pages/hello.astro
+++ b/src/pages/hello.astro
@@ -20,15 +20,14 @@ import BaseLayout from "../layouts/BaseLayout.astro";
         Say hello if you'd like, but <strong
           >then go straight to your question</strong
         >
-        <sup><a href="https://nohello.net">[1]</a></sup> ✍️
+        <sup><a href="https://nohello.net">[1]</a></sup>
       </li>
       <li>
         Please do not use @<span data-role="greeting"></span> mentions in 1:1 chats
-        — it will not speed up my response 🚫
+        — it will not speed up my response
       </li>
       <li>
         Include <strong>enough context</strong> for me to understand and act on it
-        🔍
         <ul>
           <li>
             For example: ticket number, what you've tried, what you're blocked
@@ -38,7 +37,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
       </li>
       <li>
         If it’s urgent, feel free to say so 🚨. But otherwise, I’ll reply as
-        soon as I’m able 💬
+        soon as I’m able
       </li>
     </ul>
 
