--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -68,6 +68,10 @@ const permalink = Astro.site!.href; // FIXME: using ! for now
     if (aphorisms[index]) aphorisms[index].classList.add("visible");
   </script>
 
+  <p>
+    I am currently getting organized, so it'll be a bit messy here for a while.
+  </p>
+
   <!--
   <section>
     <section>
