--- a/src/pages/context.astro
+++ b/src/pages/context.astro
@@ -3,7 +3,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 const title = "Context";
 const description =
   "Starting points for understanding distributed cognition and consciousness collaboration";
-const permalink = Astro.site!.href; // FIXME: using ! for now
+const permalink = Astro.site?.href ?? "https://goude.se/";
 ---
 
 <BaseLayout title={title} description={description} permalink={permalink}>
