--- a/src/pages/t/consciousness-club.astro
+++ b/src/pages/t/consciousness-club.astro
@@ -2,7 +2,7 @@
 import BaseLayout from "../../layouts/BaseLayout.astro";
 const title = "The Consciousness Club";
 const description = "A simple moral framework for all minds";
-const permalink = Astro.site!.href; // FIXME: using ! for now
+const permalink = Astro.site?.href ?? "https://goude.se/";
 ---
 
 <BaseLayout title={title} description={description} permalink={permalink}>
