--- a/src/pages/t/learn.astro
+++ b/src/pages/t/learn.astro
@@ -3,7 +3,7 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
 
 const title = "Things to Learn";
 const description = "A collection of things that are useful to know.";
-const permalink = Astro.site!.href; // FIXME: using ! for now
+const permalink = Astro.site?.href ?? "https://goude.se/";
 ---
 
 <BaseLayout title={title} description={description} permalink={permalink}>
