minor edit/housekeeping activity

--- a/src/pages/t/consciousness-club.astro
+++ b/src/pages/t/consciousness-club.astro
@@ -115,5 +115,18 @@ const permalink = Astro.site?.href ?? "https://goude.se/";
     </p>
 
     <p>Welcome to the Consciousness Club! 🌟</p>
+
+    <hr />
+
+    <p>
+      <strong>A Note for Future Adventures:</strong> Right now, this club focuses
+      on minds that can speak up for themselves - but we're still learning about
+      all the different ways consciousness might work in the world. There are harder
+      questions we haven't figured out yet, like how to be kind to minds we might
+      not even recognize as minds. As the club grows, we'll keep adding new ideas
+      about how to make the world better for everyone (and maybe everyone includes
+      more than we think right now!). Consider this our reminder to keep asking the
+      big questions as we go.
+    </p>
   </section>
 </BaseLayout>
