minor edit/housekeeping activity

--- a/src/pages/t/consciousness-club.astro
+++ b/src/pages/t/consciousness-club.astro
@@ -106,6 +106,7 @@ const permalink = Astro.site?.href ?? "https://goude.se/";
       <li>You control where you point your attention</li>
       <li>All minds are precious and different</li>
       <li>Understanding each other makes everything better</li>
+      <li><strong>A mind cannot be owned</strong></li>
     </ul>
 
     <p>
