--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,10 +1,5 @@
 ---
 import "../styles/tufte.css";
-/*
-import "../styles/tufte-extra.css";
-import "../styles/pandoc.css";
-import "../styles/pandoc-solarized.css";
-*/
 
 export interface Props {
   title: string;
@@ -14,16 +9,13 @@ export interface Props {
 
 const { title, description, permalink } = Astro.props;
 // FIXME: using ! for now
-const socialUrl = Astro.site!.href + "assets/social.png";
+const socialUrl = Astro.site!.href + "/favicon.svg";
 ---
 
 <!-- Global Metadata -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width" />
-<!--
-<link rel="icon" type="image/x-icon" href="/favicon.ico" />
--->
-<link rel="icon" type="image/svg+xml" href="/assets/min-off.svg" />
+<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 
 <!-- Primary Meta Tags -->
 <title>{title}</title>
