--- a/src/pages/context.astro
+++ b/src/pages/context.astro
@@ -16,12 +16,15 @@ const permalink = Astro.site?.href ?? "https://goude.se/";
 
     <ul>
       <li>
-        <a href="/idio-mini">idio-mini</a> - Compact prompt DSL and collaboration
-        protocol
+        <a href="/t/consciousness-club">The Consciousness Club</a>
       </li>
       <li>
-        <a href="/t/consciousness-club">The Consciousness Club</a> - Simple moral
-        framework
+        <a href="/t/group-harmony-guide">The Group Harmony Guide</a>
+      </li>
+      <li>
+        <a href="/t/consciousness-club-v3"
+          >The Consciousness Club Draft Version</a
+        >
       </li>
     </ul>
   </section>
