minor edit/housekeeping activity

--- a/src/pages/context.astro
+++ b/src/pages/context.astro
@@ -19,10 +19,10 @@ const permalink = Astro.site?.href ?? "https://goude.se/";
         <a href="/t/consciousness-club">The Consciousness Club</a>
       </li>
       <li>
-        <a href="/t/group-harmony-guide">The Group Harmony Guide</a>
+        <a href="/toolbox/group-harmony-guide">The Group Harmony Guide</a>
       </li>
       <li>
-        <a href="/t/consciousness-club-v3"
+        <a href="/toolbox/consciousness-club"
           >The Consciousness Club Draft Version</a
         >
       </li>
