--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ const permalink = Astro.site?.href ?? "https://goude.se/";
   current="home"
 >
   <!-- It clicked, i think -->
-  <h1 id="tufte-css">Transmission Begins</h1>
+  <h1 id="tufte-css">Entry Point</h1>
 
   <style>
     .subtitle {
@@ -69,7 +69,7 @@ const permalink = Astro.site?.href ?? "https://goude.se/";
   </script>
 
   <p>
-    I am currently getting organized, so it'll be a bit messy here for a while.
+    Begin here.
   </p>
 
   <!--
